{
    "name": "InputPlayer",
    "maps": [
        {
            "name": "Player",
            "id": "6b6ba05b-c78c-4eca-8fe9-863338583b39",
            "actions": [
                {
                    "name": "Open Chat",
                    "type": "Button",
                    "id": "d192e388-a3b5-4134-930e-afc68b12d855",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Send Message",
                    "type": "Button",
                    "id": "f22c0d00-763f-48d5-a651-87ee1b8537df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveForward",
                    "type": "Value",
                    "id": "d785a8c5-b3d3-44d4-a164-d3eb2d907ad6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "6e2a1e80-7013-46c8-80fb-23c07dd05e42",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8aa639e-2925-4144-aad2-3b952a7abe8b",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Chat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5451ca0-70fe-4734-b16f-21ab94420da3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Send Message",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "MoveForward",
                    "id": "57ae5e6e-0060-4532-b54d-1fa869c1ffc3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cbc0981f-52d4-4869-a3b7-e93bd9ea15ff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "77da03c1-cc2b-49fb-8eac-4d97850d92f6",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "8d6a4b7a-f2f5-452e-9d34-f426859642a7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "43156dff-ab17-4688-8a17-415d5265c3d4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fc84f37b-9f7d-412f-afbb-76471b608c5b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}